chore: pass down executor